add call to upgrade a cluster with the provided kubernetes version
